dashboard/dashboard.css
:root {
  --main-bg-color-vivid: oklch(80% 0.18 0);
  --main-bg-color-faded: oklch(96% 0.04 0);
  --main-bg-color-dark:  oklch(09% 0.01 0);

  --ercot-color: #60b060;

  --whr-hr-row-height: 60px; /* TODO: Commit this and not use a variable */
  --whr-day-row-height: 80px;

  --whrtemp_01_indicatorbg: #fff;
  --whrtemp_02_indicatorbg: #fff;
  --whrtemp_03_indicatorbg: #fff;
  --whrtemp_04_indicatorbg: #fff;
  --whrtemp_05_indicatorbg: #fff;
  --whrtemp_06_indicatorbg: #fff;
  --whrtemp_07_indicatorbg: #fff;
  --whrtemp_08_indicatorbg: #fff;
  --whrtemp_09_indicatorbg: #fff;
  --whrtemp_10_indicatorbg: #fff;
  --whrtemp_11_indicatorbg: #fff;
  --whrtemp_12_indicatorbg: #fff;

  --whrtemp_01_labelvis: visible;
  --whrtemp_02_labelvis: hidden;
  --whrtemp_03_labelvis: hidden;
  --whrtemp_04_labelvis: hidden;
  --whrtemp_05_labelvis: hidden;
  --whrtemp_06_labelvis: hidden;
  --whrtemp_07_labelvis: hidden;
  --whrtemp_08_labelvis: hidden;
  --whrtemp_09_labelvis: hidden;
  --whrtemp_10_labelvis: hidden;
  --whrtemp_11_labelvis: hidden;
  --whrtemp_12_labelvis: hidden;
  
  --whrtemp_01_spacerlen: 100px;
  --whrtemp_02_spacerlen: 100px;
  --whrtemp_03_spacerlen: 100px;
  --whrtemp_04_spacerlen: 100px;
  --whrtemp_05_spacerlen: 100px;
  --whrtemp_06_spacerlen: 100px;
  --whrtemp_07_spacerlen: 100px;
  --whrtemp_08_spacerlen: 100px;
  --whrtemp_09_spacerlen: 100px;
  --whrtemp_10_spacerlen: 100px;
  --whrtemp_11_spacerlen: 100px;
  --whrtemp_12_spacerlen: 100px;

  --whrtemp_01_windrot: 0deg;
  --whrtemp_02_windrot: 0deg;
  --whrtemp_03_windrot: 0deg;
  --whrtemp_04_windrot: 0deg;
  --whrtemp_05_windrot: 0deg;
  --whrtemp_06_windrot: 0deg;
  --whrtemp_07_windrot: 0deg;
  --whrtemp_08_windrot: 0deg;
  --whrtemp_09_windrot: 0deg;
  --whrtemp_10_windrot: 0deg;
  --whrtemp_11_windrot: 0deg;
  --whrtemp_12_windrot: 0deg;
  
  --whrtemp_01_windsize: 10px;
  --whrtemp_02_windsize: 10px;
  --whrtemp_03_windsize: 10px;
  --whrtemp_04_windsize: 10px;
  --whrtemp_05_windsize: 10px;
  --whrtemp_06_windsize: 10px;
  --whrtemp_07_windsize: 10px;
  --whrtemp_08_windsize: 10px;
  --whrtemp_09_windsize: 10px;
  --whrtemp_10_windsize: 10px;
  --whrtemp_11_windsize: 10px;
  --whrtemp_12_windsize: 10px;

  --whrday_01_padlen: 35px;
  --whrday_02_padlen: 35px;
  --whrday_03_padlen: 35px;
  --whrday_04_padlen: 35px;
  --whrday_05_padlen: 35px;
  --whrday_06_padlen: 35px;
  --whrday_07_padlen: 35px;
  --whrday_08_padlen: 35px;

  --whrday_01_barlen: 290px;
  --whrday_02_barlen: 290px;
  --whrday_03_barlen: 290px;
  --whrday_04_barlen: 290px;
  --whrday_05_barlen: 290px;
  --whrday_06_barlen: 290px;
  --whrday_07_barlen: 290px;
  --whrday_08_barlen: 290px;

  transition-property: width, height, left, top, background-color;
  transition-duration: 1s;
  transition-timing-function: linear;
}

/* barlow-regular - latin_latin-ext */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Barlow';
  font-style: normal;
  font-weight: 400;
  src: url('../nonsharables/barlow-v12-latin_latin-ext-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* barlow-600 - latin_latin-ext */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Barlow';
  font-style: normal;
  font-weight: 600;
  src: url('../nonsharables/barlow-v12-latin_latin-ext-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

/* vt323-regular - latin_latin-ext */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'VT323';
  font-style: normal;
  font-weight: 400;
  src: url('../nonsharables/vt323-v17-latin_latin-ext-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

.hidden {
  display: none;
}

.minionly {
  visibility: visible;
}
.focus .minionly {
  visibility: hidden;
}

.fullonly {
  visibility: hidden;
}
.focus .fullonly {
  visibility: visible;
}

#notif_stopped {
  position: fixed;
  background-color: #f00;
  color: #fff;
  z-index: 99;
  text-align: center;
  font-size: larger;

  left: 50%;
  top: 10%;
  height: 1.2em;
  width: 250px;
}

body {
  overflow: hidden;
  touch-action: none;
}

.relcenter {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* draggable */

.popup {
  border: 1px solid #d3d3d3;
  text-align: center;
  overflow: hidden;
  position: absolute;
  container: popup / size;
  /* resize: both; */ /* For debugging. Remove manual resizing in normal view */

}

.popup-header {
  padding: 3px;
  cursor: move;
  z-index: 10;
  background-color: #2196f3;
  color: #fff;
  opacity: 0.1;
}

/**/
@container popup(min-height: 100px; min-width: 100px;) {}

.popup-square {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin: auto;
  height: 100cqmin;
  width: 100cqmin;

  /** background-color: #aaa; /**/
  z-index: -20;
}
/**/

/**
.popup-square {
width: 100%;
height: 0;
padding-top: 100%;
background-color: #aaa;
}
/**/

.square {
  display: block;
  position: absolute;
  margin: auto;
  height: 100cqmin;
  width: 100cqmin;

  background-color: #888;
  border: 3px solid #fff;
  text-align: center;
  overflow: hidden;
  position: absolute;
  container: popup / size;
  /* resize: both; */ /* For debugging. Remove manual resizing in normal view */
  
  transition-property: width, height, left, top, background-color;
  transition-duration: 1s;
  transition-timing-function: linear;
}

#weathermini {
  width: 270px;
  height: 270px;
  position: absolute;
  left: 0px;
  top: 0px;
}

#weatherfull_map {
  width: 270px;
  height: 270px;
  position: absolute;
  left: 270px;
  top: 0px;
}
/* ... */

